--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
         </div>
     </header>
     
+    <!-- home section -->
+    <section class="home" id="home">
+        <div class="homeContent">
+            <h2>Delicious Cake for Everyone</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Eveniet quidem id, hic atque delectus magni ut odit incidunt 
+                ipsum obcaecati architecto unde, corrupti, eos doloribus 
+                expedita itaque consequuntur in repellat?</p>
+            <div class="home-btn">
+                <a href="#"><button>see more</button></a>
+            </div>
+        </div>
+    </section>
     
     <!-- custom js file -->
     <script src="index.js"></script>
