--- a/index.html
+++ b/index.html
@@ -51,7 +51,31 @@
             </div>
         </div>
     </section>
+
+    <!-- product section -->
+    <section class="product" id="product">
+        <div class="heading">
+            <h2>Our Exclusive Products</h2>
+        </div>
+        <div class="product-row">
+            <div class="box">
+                <div class="img">
+                    <img src="/Images/cake1.png" alt="cake.ex1">
+                </div>
+                <div class="product-content">
+                    <h3>Chocolate</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ducimus tenetur cumque reiciendis error magnam odit nam, repudiandae doloribus debitis ipsa?
+                    </p>
+                    <div class="orderNow">
+                        <button>Order Now</button>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     
+
     <!-- custom js file -->
     <script src="index.js"></script>
 </body>
