--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="heading">
             <h2>Our Exclusive Products</h2>
         </div>
+        <!-- row1 -->
         <div class="swiper product-row">
             <div class="swiper-wrapper">
                 <!-- item #1 -->
@@ -68,7 +69,9 @@
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ducimus tenetur cumque reiciendis error magnam odit nam, repudiandae doloribus debitis ipsa?
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quod ducimus tenetur cumque reiciendis error magnam odit 
+                            nam, repudiandae doloribus debitis ipsa?
                         </p>
                         <div class="orderNow">
                             <button>Order Now</button>
@@ -82,7 +85,9 @@
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ducimus tenetur cumque reiciendis error magnam odit nam, repudiandae doloribus debitis ipsa?
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quod ducimus tenetur cumque reiciendis error magnam odit 
+                            nam, repudiandae doloribus debitis ipsa?
                         </p>
                         <div class="orderNow">
                             <button>Order Now</button>
@@ -96,7 +101,63 @@
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ducimus tenetur cumque reiciendis error magnam odit nam, repudiandae doloribus debitis ipsa?
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quod ducimus tenetur cumque reiciendis error magnam odit nam, 
+                            epudiandae doloribus debitis ipsa?
+                        </p>
+                        <div class="orderNow">
+                            <button>Order Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
+        </div>
+        <!-- row2 -->       
+        <div class="swiper product-row">
+            <div class="swiper-wrapper">
+                <!-- item #1 -->
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="/Images/cake1.png" alt="cake.ex1">
+                    </div>
+                    <div class="product-content">
+                        <h3>Chocolate</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quod ducimus tenetur cumque reiciendis error magnam odit 
+                            nam, repudiandae doloribus debitis ipsa?
+                        </p>
+                        <div class="orderNow">
+                            <button>Order Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- item #2 -->
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="/Images/cake2.png" alt="cake.ex2">
+                    </div>
+                    <div class="product-content">
+                        <h3>Chocolate</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quod ducimus tenetur cumque reiciendis error magnam odit 
+                            nam, repudiandae doloribus debitis ipsa?
+                        </p>
+                        <div class="orderNow">
+                            <button>Order Now</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- item #3 -->
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="/Images/cake3.png" alt="cake.ex3">
+                    </div>
+                    <div class="product-content">
+                        <h3>Chocolate</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                            Quod ducimus tenetur cumque reiciendis error magnam odit nam, 
+                            epudiandae doloribus debitis ipsa?
                         </p>
                         <div class="orderNow">
                             <button>Order Now</button>
@@ -108,6 +169,31 @@
         </div>
     </section>
     
+    <!-- blog section -->
+    <section class="blogs" id="blogs">
+        <div class="blogs-row">
+            <div class="box">
+                <div class="img">
+                    <img src="Images/blog-img1.png" alt="blogex1">
+                </div>
+            </div>
+            <div class="content">
+                <h3>What makes our pastries special?</h3>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                    Sapiente ut pariatur eius, necessitatibus dolor nihil in 
+                    exercitationem, qui impedit quibusdam, neque nulla iure. 
+                    Nihil, accusamus quibusdam hic ex dignissimos maiores.</p>
+                    <p>Ex sint explicabo libero, eum non nihil. At rem, ab dolorum
+                        temporibus voluptas dicta consequatur.</p>
+                <a href="#blogs" class="btn">learn more</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- review section -->
+
+    <!-- contact section -->
+
     <!-- swiper js link -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
