--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <!-- item #1 -->
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="/Images/cake1.png" alt="cake.ex1">
+                        <img src="Images/cake1.png" alt="cake.ex1">
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
@@ -82,7 +82,7 @@
                 <!-- item #2 -->
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="/Images/cake2.png" alt="cake.ex2">
+                        <img src="Images/cake2.png" alt="cake.ex2">
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
@@ -98,7 +98,7 @@
                 <!-- item #3 -->
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="/Images/cake3.png" alt="cake.ex3">
+                        <img src="Images/cake3.png" alt="cake.ex3">
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
@@ -120,7 +120,7 @@
                 <!-- item #1 -->
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="/Images/cake1.png" alt="cake.ex1">
+                        <img src="Images/cake1.png" alt="cake.ex1">
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
@@ -136,7 +136,7 @@
                 <!-- item #2 -->
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="/Images/cake2.png" alt="cake.ex2">
+                        <img src="Images/cake2.png" alt="cake.ex2">
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
@@ -152,7 +152,7 @@
                 <!-- item #3 -->
                 <div class="swiper-slide box">
                     <div class="img">
-                        <img src="/Images/cake3.png" alt="cake.ex3">
+                        <img src="Images/cake3.png" alt="cake.ex3">
                     </div>
                     <div class="product-content">
                         <h3>Chocolate</h3>
