--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo1</title>
     <!-- css links-->
-    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/styles.css">
     <!-- sdn icon link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
@@ -172,22 +171,58 @@
     
     <!-- blog section -->
     <section class="blogs" id="blogs">
-        <div class="blogs-row">
-            <div class="box">
-                <div class="img">
-                    <img src="Images/blog-img1.png" alt="blogex1">
+        <div class="swiper blogs-row">
+            <div class="swiper-wrapper">
+                <!-- box #1 -->
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="Images/blog-img1.png" alt="blogex1">
+                    </div>
+                    <div class="content">
+                        <h3>Vanilla Buttercream Cupcake With Sprinkles</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Sapiente ut pariatur eius, necessitatibus dolor nihil in
+                            exercitationem, qui impedit quibusdam, neque nulla iure.
+                            Nihil, accusamus quibusdam hic ex dignissimos maiores.</p>
+                        <p>Ex sint explicabo libero, eum non nihil. At rem, ab dolorum
+                                temporibus voluptas dicta consequatur.</p>
+                        <a href="#blogs" class="btn"><b>learn more</b></a>
+                    </div>
+                </div>
+                <!-- box #2 -->
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="Images/blog-img2.png" alt="blogex1">
+                    </div>
+                    <div class="content">
+                        <h3>Vanilla Buttercream Cupcake With Sprinkles</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Sapiente ut pariatur eius, necessitatibus dolor nihil in
+                            exercitationem, qui impedit quibusdam, neque nulla iure.
+                            Nihil, accusamus quibusdam hic ex dignissimos maiores.</p>
+                        <p>Ex sint explicabo libero, eum non nihil. At rem, ab dolorum
+                                temporibus voluptas dicta consequatur.</p>
+                        <a href="#blogs" class="btn"><b>learn more</b></a>
+                    </div>
+                </div>
+                <!-- box #3 -->
+                <div class="swiper-slide box">
+                    <div class="img">
+                        <img src="Images/blog-img3.png" alt="blogex1">
+                    </div>
+                    <div class="content">
+                        <h3>Vanilla Buttercream Cupcake With Sprinkles</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                            Sapiente ut pariatur eius, necessitatibus dolor nihil in
+                            exercitationem, qui impedit quibusdam, neque nulla iure.
+                            Nihil, accusamus quibusdam hic ex dignissimos maiores.</p>
+                        <p>Ex sint explicabo libero, eum non nihil. At rem, ab dolorum
+                                temporibus voluptas dicta consequatur.</p>
+                        <a href="#blogs" class="btn"><b>learn more</b></a>
+                    </div>
                 </div>
             </div>
-            <div class="content">
-                <h3>What makes our pastries special?</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                    Sapiente ut pariatur eius, necessitatibus dolor nihil in 
-                    exercitationem, qui impedit quibusdam, neque nulla iure. 
-                    Nihil, accusamus quibusdam hic ex dignissimos maiores.</p>
-                    <p>Ex sint explicabo libero, eum non nihil. At rem, ab dolorum
-                        temporibus voluptas dicta consequatur.</p>
-                <a href="#blogs" class="btn">learn more</a>
-            </div>
+            <div class="swiper-pagination"></div>
         </div>
     </section>
 
