swiper navbtn defined

--- a/index.html
+++ b/index.html
@@ -222,14 +222,20 @@
                     </div>
                 </div>
             </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
             <div class="swiper-pagination"></div>
         </div>
     </section>
 
     <!-- review section -->
+     <section class="review" id="review">
 
+     </section>
     <!-- contact section -->
-
+    <section class="contact" id="contact">
+        
+    </section>
     <!-- swiper js link -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 
